# test_pub_sub_ws

./: note.txt
devel/: .catkin  local_setup.fish  local_setup.sh  setup.sh
devel/include/test_protobuf_msg/: Chatter.h  Chatter.pb.cc
devel/include/test_pub_sub_protobuf/: Chatter.h
devel/lib/pkgconfig/: catkin_simple.pc  protobuf_catkin.pc  test_protobuf_msg.pc  test_pub_sub.pc  test_pub_sub_protobuf.pc
devel/lib/python3/dist-packages/test_protobuf_msg/msg/: _Chatter.py
devel/lib/python3/dist-packages/test_pub_sub_protobuf/msg/: _Chatter.py  __init__.py
devel/lib/test_protobuf_msg/: proto_publisher  proto_subscriber  ros_publisher  ros_subscriber
devel/lib/test_pub_sub/: publisher_node  subscriber_node
devel/lib/test_pub_sub_protobuf/: publisher_node_proto  subscriber_node_proto
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
devel/share/common-lisp/ros/test_protobuf_msg/msg/: Chatter.lisp  _package.lisp  _package_Chatter.lisp  test_protobuf_msg-msg.asd
devel/share/common-lisp/ros/test_pub_sub_protobuf/msg/: Chatter.lisp  _package.lisp  _package_Chatter.lisp  test_pub_sub_protobuf-msg.asd
devel/share/gennodejs/ros/test_protobuf_msg/msg/: Chatter.js
devel/share/gennodejs/ros/test_pub_sub_protobuf/msg/: Chatter.js  _index.js
devel/share/protobuf_catkin/cmake/: protobuf_catkinConfig.cmake
devel/share/roseus/ros/test_protobuf_msg/: manifest.l
devel/share/roseus/ros/test_protobuf_msg/msg/: Chatter.l
devel/share/roseus/ros/test_pub_sub_protobuf/: manifest.l
devel/share/roseus/ros/test_pub_sub_protobuf/msg/: Chatter.l
devel/share/test_protobuf_msg/cmake/: test_protobuf_msg-msg-paths.cmake  test_protobuf_msgConfig.cmake
devel/share/test_pub_sub/cmake/: test_pub_subConfig.cmake
devel/share/test_pub_sub_protobuf/cmake/: test_pub_sub_protobuf-msg-extras.cmake  test_pub_sub_protobuf-msg-paths.cmake  test_pub_sub_protobufConfig.cmake
src/test_protobuf_msg/: CMakeLists.txt
src/test_protobuf_msg/include/test_protobuf_msg/: message_traits.h  serialization_protobuffer.h
src/test_protobuf_msg/msg/: Chatter.msg
src/test_protobuf_msg/proto/: Chatter.proto
src/test_protobuf_msg/src/: proto_publisher.cpp  proto_subscriber.cpp  ros_publisher.cpp  ros_subscriber.cpp
src/test_pub_sub/: CMakeLists.txt
src/test_pub_sub/src/: publisher_node.cpp  subscriber_node.cpp
src/test_pub_sub_protobuf/: CMakeLists.txt  package.xml
src/test_pub_sub_protobuf/include/test_pub_sub_protobuf/: message_traits.h
src/test_pub_sub_protobuf/msg/: Chatter.msg
src/test_pub_sub_protobuf/proto/: Chatter.proto
src/test_pub_sub_protobuf/src/: publisher_node_proto.cpp  subscriber_node_proto.cpp
