<?xml version="1.0"?>
<package format="2">
  <name>test_pub_sub_protobuf</name>
  <version>0.0.1</version>
  <description>A ROS package for testing publisher and subscriber with Protobuf messages</description>
  <maintainer email="zt@example.com">ZT</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>protobuf</depend>

  <export>
  </export>
</package>